# socratest

./: .gitignore  AUTHORS.md  README.md  app  com.gitlab.Peter_van_der_Velde.socratest.json  meson.build
data/: com.gitlab.Peter_van_der_Velde.libre_lehrer.appdata.xml  com.gitlab.Peter_van_der_Velde.libre_lehrer.desktop  com.gitlab.Peter_van_der_Velde.libre_lehrer.desktop.in  com.gitlab.Peter_van_der_Velde.libre_lehrer.gresource.xml  com.gitlab.Peter_van_der_Velde.libre_lehrer.gschema.xml  com.gitlab.Peter_van_der_Velde.socratest.appdata.xml.in  com.gitlab.Peter_van_der_Velde.socratest.desktop.in  com.gitlab.Peter_van_der_Velde.socratest.gresource.xml  com.gitlab.Peter_van_der_Velde.socratest.gschema.xml  home.ui  main.ui  meson.build  test.ui  test_results.ui  test_settings.ui
data/css/: style.css
data/views/: add_test.ui  home.ui  main.ui  test.ui  test_results.ui  test_settings.ui
debian/: changelog  control  copyright  rules
meson/: post_install.py
po/: POTFILES  com.gitlab.Peter_van_der_Velde.libre_lehrer.pot  com.gitlab.Peter_van_der_Velde.socratest.pot  nl.po
po/extra/: POTFILES  extra.pot  nl.po
src/: Application  Application.vala  Main.vala  Window.vala  main.vala  meson.build
src/Model/: Test.vala  TestDB.vala  Word.vala  WordList.vala
src/Views/: AddTest.vala  Home.vala  TestResults.vala  TestSettings.vala  TestView.vala  Welcome.vala
src/configs/: Constants.vala  Settings.vala
src/controllers/: ActionManager.vala  AppController.vala
src/model/: Test.vala  TestDB.vala  Word.vala  WordList.vala
src/views/: AppView.vala  Home.vala  TestResults.vala  TestSettings.vala  TestView.vala  Welcome.vala
src/widgets/: AddTestDialog.vala  HeaderBar.vala
tests/: assert.vala  test.vala
