sources += files(
    'configs/Constants.vala',
    'configs/Settings.vala',

    'model/Test.vala',
    'model/TestDB.vala',
    'model/Word.vala',
    'model/WordList.vala',

    'controllers/AppController.vala',
    'controllers/ActionManager.vala',

    'views/TestResults.vala',
    'views/TestView.vala',
    'views/Home.vala',
    'views/TestSettings.vala',
    'views/Welcome.vala',

    'widgets/AddTestDialog.vala',
    'widgets/HeaderBar.vala',

    'Application.vala',
    'Main.vala',
    'Window.vala'
)
